fixes visible scrollbars in editor in some computer/browser setups

--- a/mockapp-ui/src/main/webapp/VAADIN/themes/mockapp/mockapp.scss
+++ b/mockapp-ui/src/main/webapp/VAADIN/themes/mockapp/mockapp.scss
@@ -119,7 +119,7 @@
   
   /* Editor field section scrolls when there is not enough space vertically */
   .product-form-fields {
-  	overflow:scroll;
+  	overflow:auto;
   	height:100%;
   }
   
